--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@babel/types": "^7.17.10",
     "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.5.4",
+    "typescript": "^4.7.4",
     "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7",
-    "@babel/types": "^7.17.10"
+    "vue-tsc": "^0.40.1"
   }
 }
