--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,21 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host --mode development",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.2.14",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^18.7.12",
     "@babel/types": "^7.17.10",
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.40.1"
   }
