--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.14",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-echarts": "^6.2.3"
   },
   "devDependencies": {
-    "@types/node": "^18.7.12",
     "@babel/types": "^7.17.10",
+    "@types/node": "^18.7.12",
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.11.2",
