--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "echarts": "^5.3.3",
     "element-plus": "^2.2.14",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-echarts": "^6.2.3"
   },
