--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/types": "^7.17.10",
     "@types/node": "^18.7.12",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.11.2",
