--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "echarts": "^5.3.3",
     "element-plus": "^2.2.14",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.25",
-    "vue-echarts": "^6.2.3"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@babel/types": "^7.17.10",
