--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ PubBin:
     - 'mkdir $LATENCY_PKG\lib\scrcpy'
     - 'cp $env:SCRCPY_PATH\* $LATENCY_PKG\lib\scrcpy\'
     - 'mkdir $LATENCY_PKG\lib\ffmpeg'
-    - 'cp $env:FFMPEG_PATH\ffmpeg.exe $LATENCY_PKG\ffmpeg\ffmpeg.exe'
+    - 'cp $env:FFMPEG_PATH\ffmpeg.exe $LATENCY_PKG\lib\ffmpeg\ffmpeg.exe'
     - Compress-Archive -Path .\$LATENCY_PKG -DestinationPath .\$LATENCY_PKG.zip
     - 'curl.exe -k --header "JOB-TOKEN: $env:CI_JOB_TOKEN" --upload-file .\$LATENCY_PKG.zip "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/latenct-mobile-$env:CI_COMMIT_TAG/$env:CI_COMMIT_TAG/$LATENCY_PKG.zip"'
   only:
