--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ CompileWinAmd64:
     - '[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8'
   script:
     - go install github.com/wailsapp/wails/v2/cmd/wails@latest
-    - wails build -platform windows/amd64 -o latency-mobile.exe -webview2 embed
+    - wails build -s -platform windows/amd64 -o latency-mobile.exe -webview2 embed
   artifacts:
     paths:
       - build/bin/latency-mobile.exe
