--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-ffmpeg filter=lfs diff=lfs merge=lfs -text
-ffmpeg.exe filter=lfs diff=lfs merge=lfs -text
+lib/** filter=lfs diff=lfs merge=lfs -text
