--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,45 +6,6 @@ stages:
   - build
   - delivery
 
-# Test:
-#   stage: test
-#   tags:
-#     - pc-windows
-#   before_script:
-#     - '[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8'
-#   script:
-#     - echo "测试"
-
-# CompileWin:
-#   stage: build
-#   tags:
-#     - pc-windows
-#   before_script:
-#     - '[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8'
-#   script:
-#     - go install github.com/wailsapp/wails/v2/cmd/wails@latest
-#     - echo $env:PATH
-#     - wails build -o perftool.exe
-#     - go build -o perftool-userpass.exe .\cmd\generate_userpass
-#   artifacts:
-#     paths:
-#       - build\bin\perftool.exe
-#       - perftool-userpass.exe
-#     expire_in: 24 hrs
-
-# CompileMacArm:
-#   stage: build
-#   tags:
-#     - mac
-#   script:
-#     - go install github.com/wailsapp/wails/v2/cmd/wails@latest
-#     - echo $env:$PATH
-#     - wails build -platform darwin/arm64
-#   artifacts:
-#     paths:
-#       - build/bin/perftool-gui.app
-#     expire_in: 24 hrs
-
 CompileMacAmd64:
   stage: build
   tags:
@@ -81,18 +42,17 @@ PubBin:
   dependencies:
     - CompileWinAmd64
   variables:
-    SCRCPY_PATH: D:\github\scrcpy
-    FFMPEG_PATH: D:\github\ffmpeg\bin
+#    SCRCPY_PATH: D:\github\scrcpy
+#    FFMPEG_PATH: D:\github\ffmpeg\bin
+    LIB_WINDOWS_PATH: .\lib\windows
   script:
     - '$LATENCY_PKG = "latency-mobile-win-$env:CI_COMMIT_TAG"'
     - 'mkdir $LATENCY_PKG'
     - 'cp .\build\bin\latency-mobile.exe $LATENCY_PKG\'
-    - 'mkdir $LATENCY_PKG\lib\scrcpy'
-    - 'cp $env:SCRCPY_PATH\* $LATENCY_PKG\lib\scrcpy\'
-    - 'mkdir $LATENCY_PKG\lib\ffmpeg'
-    - 'cp $env:FFMPEG_PATH\ffmpeg.exe $LATENCY_PKG\lib\ffmpeg\ffmpeg.exe'
+    - 'mkdir $LATENCY_PKG\lib\'
+    - 'cp -r $env:LIB_WINDOWS_PATH\* $LATENCY_PKG\lib\'
     - Compress-Archive -Path .\$LATENCY_PKG -DestinationPath .\$LATENCY_PKG.zip
-    - 'curl.exe -k --header "JOB-TOKEN: $env:CI_JOB_TOKEN" --upload-file .\$LATENCY_PKG.zip "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/latenct-mobile-$env:CI_COMMIT_TAG/$env:CI_COMMIT_TAG/$LATENCY_PKG.zip"'
+    - 'curl.exe -k --header "JOB-TOKEN: $env:CI_JOB_TOKEN" --upload-file .\$LATENCY_PKG.zip "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/latency-mobile-$env:CI_COMMIT_TAG/$env:CI_COMMIT_TAG/$LATENCY_PKG.zip"'
   only:
     - tags
 
