ci: add release with lighttest ##DEV-28657

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,14 @@
       "esnext",
       "dom"
     ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ],
+    "types": [
+      "node",
+      "./node_modules/element-plus/global"
+    ],
     "baseUrl": ".",
     "paths": {
       "@/*": [
