--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,15 @@ CompileWinAmd64:
   tags:
     - pc-windows
   before_script:
-    - '[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8'
+    - "[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8"
   script:
     - go install github.com/wailsapp/wails/v2/cmd/wails@latest
-    - wails build -s -platform windows/amd64 -o latency-mobile.exe -webview2 embed
+    - echo $env:PATH
+    - $Version = if ( Test-Path env:CI_COMMIT_TAG ) { $env:CI_COMMIT_TAG } else { 'debug-$env:CI_COMMIT_SHORT_SHA' }
+    - $CommitShortSHA = $env:CI_COMMIT_SHORT_SHA
+    - $BuildTimestamp = [DateTimeOffset]::Now.ToUnixTimeSeconds()
+    - $LDFLAGS = "-X 'gitlab.vrviu.com/epc/lighttest-lib/version.Version=$Version' -X 'gitlab.vrviu.com/epc/lighttest-lib/version.CommitShortSHA=$CommitShortSHA' -X 'gitlab.vrviu.com/epc/lighttest-lib/version.BuildTimastamp=$BuildTimestamp'"
+    - wails build -s -platform windows/amd64 -ldflags $LDFLAGS -o latency-mobile.exe -webview2 embed
   artifacts:
     paths:
       - build/bin/latency-mobile.exe
@@ -38,24 +43,32 @@ PubBin:
   tags:
     - pc-windows
   before_script:
-    - '[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8'
+    - "[System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8"
   dependencies:
     - CompileWinAmd64
   variables:
-#    SCRCPY_PATH: D:\github\scrcpy
-#    FFMPEG_PATH: D:\github\ffmpeg\bin
+    OSSUTIL: C:\Dev\ossutil64\ossutil64.exe
+    OSSUTIL_CONF: C:\Dev\ossutil64\config
+    OSS_BUCKET: inner-tech
+    MYSQL_CLIENT: D:\mysql-8.0.30-winx64\bin\mysql.exe
+    LIGHTTEST_MYSQL_HOST: 172.18.200.21
+    LIGHTTEST_MYSQL_PORT: 21009
     LIB_WINDOWS_PATH: .\lib\windows
   script:
     - '$LATENCY_PKG = "latency-mobile-win-$env:CI_COMMIT_TAG"'
-    - 'mkdir $LATENCY_PKG'
+    - "mkdir $LATENCY_PKG"
     - 'cp .\build\bin\latency-mobile.exe $LATENCY_PKG\'
     - 'mkdir $LATENCY_PKG\lib\'
     - 'cp -r $env:LIB_WINDOWS_PATH\* $LATENCY_PKG\lib\'
     - Compress-Archive -Path .\$LATENCY_PKG -DestinationPath .\$LATENCY_PKG.zip
     - 'curl.exe -k --header "JOB-TOKEN: $env:CI_JOB_TOKEN" --upload-file .\$LATENCY_PKG.zip "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/packages/generic/latency-mobile-$env:CI_COMMIT_TAG/$env:CI_COMMIT_TAG/$LATENCY_PKG.zip"'
+
+    - '$oss_obj_key = "lighttest/latency-mobile/$LATENCY_PKG.zip"'
+    - '& $env:OSSUTIL --config-file $env:OSSUTIL_CONF cp .\$LATENCY_PKG.zip oss://$env:OSS_BUCKET/$oss_obj_key'
+    - $sql_query = [string]::Format("INSERT INTO release_info (name, os, arch, version, bucket, object_key) values ('latency-mobile', 'windows', 'amd64', '{0}', '{1}', '{2}');", $env:CI_COMMIT_TAG, $env:OSS_BUCKET, $OSS_OBJ_KEY)
+    - "& $env:MYSQL_CLIENT -h $env:LIGHTTEST_MYSQL_HOST -P $env:LIGHTTEST_MYSQL_PORT -uroot --password=$env:LIGHTTEST_MYSQL_PASSWORD lighttest_service -e $sql_query"
   only:
     - tags
-
 # PubMacArm:
 #   stage: delivery
 #   tags:
