doc: update doc ##DEV-29089

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,8 @@ PubBin:
     - 'cp .\build\bin\latency-mobile.exe $LATENCY_PKG\'
     - 'mkdir $LATENCY_PKG\lib\'
     - 'cp -r $env:LIB_WINDOWS_PATH\* $LATENCY_PKG\lib\'
+    # docs
+    - 'cp -r .\doc\* $LATENCY_PKG\'
     # rscapture
     - 'mkdir $LATENCY_PKG\lib\rscapture'
     - 'curl.exe -k --output $OP_LATENCY_PKG\lib\rscapture\rscapture.exe --header "PRIVATE-TOKEN: $env:EPC_TOKEN" "https://$env:CI_SERVER_HOST/api/v4/projects/895/jobs/artifacts/master/raw/target/release/rscapture-wgc.exe?job=Compile"'
