--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ CompileWinAmd64:
   script:
     - go install github.com/wailsapp/wails/v2/cmd/wails@latest
     - echo $env:PATH
-    - $Version = if ( Test-Path env:CI_COMMIT_TAG ) { $env:CI_COMMIT_TAG } else { 'debug-'+$env:CI_COMMIT_SHORT_SHA }
+    - $Version = if ( Test-Path env:CI_COMMIT_TAG ) { $env:CI_COMMIT_TAG } else { "debug-$env:CI_COMMIT_SHORT_SHA" }
     - $CommitShortSHA = $env:CI_COMMIT_SHORT_SHA
     - $BuildTimestamp = [DateTimeOffset]::Now.ToUnixTimeSeconds()
     - $LDFLAGS = "-X 'gitlab.vrviu.com/epc/lighttest-lib/version.Version=$Version' -X 'gitlab.vrviu.com/epc/lighttest-lib/version.CommitShortSHA=$CommitShortSHA' -X 'gitlab.vrviu.com/epc/lighttest-lib/version.BuildTimastamp=$BuildTimestamp'"
