--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,19 @@ PubBin:
     - "& $env:MYSQL_CLIENT -h $env:LIGHTTEST_MYSQL_HOST -P $env:LIGHTTEST_MYSQL_PORT -uroot --password=$env:LIGHTTEST_MYSQL_PASSWORD lighttest_service -e $sql_query"
   only:
     - tags
+
+PubToDCenter:
+  stage: delivery
+  when: manual
+  image: default.registry.tke.com/vrviu/package-navigation:45d9075c
+  dependencies:
+    - CompileWinAmd64
+    - DocGenerate
+  variables:
+    VER: $CI_COMMIT_TAG
+    NAME: op-latency-$VER
+  script:
+    - /usr/local/app/package-navigation -c /usr/local/app/config.yaml -m load --project_id ${CI_PROJECT_ID} --package_name $NAME --package_version $VER
 # PubMacArm:
 #   stage: delivery
 #   tags:
